--- a/application/package.json
+++ b/application/package.json
@@ -4,7 +4,7 @@
   "description": "An application using Restful API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "restful",
@@ -14,7 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
+    "mocha": "^8.1.3",
     "mongoose": "^5.10.2"
   }
 }
