--- a/application/package.json
+++ b/application/package.json
@@ -4,7 +4,7 @@
   "description": "An application using Restful API",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --exit"
   },
   "keywords": [
     "restful",
