--- a/application/package.json
+++ b/application/package.json
@@ -19,5 +19,12 @@
     "express": "^4.17.1",
     "mocha": "^8.1.3",
     "mongoose": "^5.10.2"
-  }
+  },
+  "engines": {
+    "node": "12.8"
+  },
+  "scripts": {
+    "start": "node index.js"
+  }  
+  
 }
