--- a/application/package.json
+++ b/application/package.json
@@ -22,7 +22,7 @@
     "mongoose": "^5.10.2"
   },
   "engines": {
-    "node": "12.8",
-    "npm":"5.x"
+    "npm":"5.x",
+    "node": "12.8"
   }  
 }
