--- a/application/app.yaml
+++ b/application/app.yaml
@@ -1,13 +1,10 @@
-runtime: nodejs
-env: flex
+runtime: nodejs12
 
-# This sample incurs costs to run on the App Engine flexible environment.
-# The settings below are to reduce costs during testing and are not appropriate
-# for production use. For more information, see:
-# https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
+# Closed the instance when no incoming http request within 5mins
 manual_scaling:
   instances: 1
+  idle_timeout: 5m
 resources:
   cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
+  memory_gb: 0.3
+  disk_size_gb: 0.5
