Edit to basic scaling with max instances of 1

--- a/application/app.yaml
+++ b/application/app.yaml
@@ -1,9 +1,9 @@
 runtime: nodejs12
 
 # Closed the instance when no incoming http request within 5mins
-manual_scaling:
-  instances: 1
-  idle_timeout: 5m
+basic_scaling:
+  max_instances: 1
+  idle-timeout: 5m
 resources:
   cpu: 1
   memory_gb: 0.3
