--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_2fd045226a67_key -iv $encrypted_2fd045226a67_iv
   -in client-secret.json.enc -out client-secret.json -d
 - gcloud auth activate-service-account --key-file client-secret.json
+- gcloud components update
 install:
 - gcloud config set project cs3219-assignment-b-289709
 before_script:
