--- a/application/app.yaml
+++ b/application/app.yaml
@@ -1,6 +1,11 @@
 runtime: nodejs12
 api_version: 1
 threadsafe: true
+handlers:
+  - url: /.*
+    secure: always
+    redirect_http_response_code: 301
+    script: auto
 basic_scaling:
   max_instances: 1
   idle_timeout: 5m
