--- a/application/package.json
+++ b/application/package.json
@@ -19,10 +19,11 @@
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "mocha": "^8.1.3",
-    "mongoose": "^5.10.2"
+    "mongoose": "^5.10.2",
+    "vue": "^2.6.12"
   },
   "engines": {
-    "npm":"5.x",
+    "npm": "5.x",
     "node": "12.8"
-  }  
+  }
 }
