--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,12 @@
 language: node_js
 node_js:
-- '12.8'
+  - "12.8"
 services:
-- mongodb
+  - mongodb
 dist: trusty
-# before_install:
-# - openssl aes-256-cbc -K $encrypted_2fd045226a67_key -iv $encrypted_2fd045226a67_iv
-#   -in client-secret.json.enc -out client-secret.json -d
-# - gcloud auth activate-service-account --key-file client-secret.json
-# install:
-# - gcloud config set project cs3219-assignment-b-289709
 before_script:
-- cd application
-- npm install
+  - cd application
+  - npm install
 script:
-- npm run test
-# - gcloud -q app deploy app.yaml --project cs3219-assignment-b-289709 --promote 
+  - npm run test
+  - sls deploy
