--- a/application/package.json
+++ b/application/package.json
@@ -20,10 +20,7 @@
     "express": "^4.17.1",
     "mocha": "^8.1.3",
     "mongoose": "^5.10.2",
+    "serverless-http": "^2.6.0",
     "vue": "^2.6.12"
-  },
-  "engines": {
-    "npm": "5.x",
-    "node": "12.8"
   }
 }
