--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,14 @@ node_js:
   - "12.8"
 services:
   - mongodb
+cache:
+  directories:
+    - node_modules
 dist: trusty
 before_script:
   - cd application
   - npm install
+  - npm install -g serverless
 script:
   - npm run test
   - sls deploy
